Fix image paths, breadcrumb spacing.

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -42,7 +42,7 @@ header {
 // Scoot the flash up next to the breadcrumbs
 .breadcrumbs + .flash-generic, .breadcrumbs + .flash-notice,
 .breadcrumbs + .flash-success, .breadcrumbs + .flash-alert {
-  margin-top: -1.25em;
+  margin-top: -1.5em;
 }
 
 .custom.radio, .custom.checkbox { margin-right: 0.5em; }
